modules/vpc/subnets.tf
resource "aws_subnet" "public" {
  # count = length(var.public_subnet_cidrs)
  count                   = length(var.availability_zones)
  vpc_id                  = aws_vpc.tcc_vpc.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = true

  tags = {
    # Name                                        = "${var.vpc_name}-public-subnet-${count.index + 1}"
    Name                                        = format("%s-%s-%s-public-subnet-${count.index + 1}-${element(var.availability_zones, count.index)}", var.tags["id"], var.tags["environment"], var.tags["project"])
    "kubernetes.io/role/elb"                    = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
  }
}

resource "aws_subnet" "private" {
  # count = length(var.private_subnet_cidrs)
  count             = length(var.availability_zones)
  vpc_id            = aws_vpc.tcc_vpc.id
  cidr_block        = var.private_subnet_cidrs[count.index] + length(var.availability_zones)
  availability_zone = element(var.availability_zones, count.index)

  tags = {
    # Name                                        = "${var.vpc_name}-private-subnet-${count.index + 1}"
    Name                                        = format("%s-%s-%s-private-subnet-${count.index + 1}-${element(var.availability_zones, count.index)}", var.tags["id"], var.tags["environment"], var.tags["project"])
    "kubernetes.io/role/elb"                    = "1"
    "kubernetes.io/cluster/${var.cluster_name}" = "shared"
  }
}
